# react-math-rust-app

./: Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-7gIPkXFX.js  index-JJP1yz18.js  index-_IMEszDa.js  wasm_bg-2_KSixXX.wasm  wasm_bg-LpqzVoZy.wasm
src/: App.tsx  CalculationTab.tsx  types.ts
src/assets/: pages.json
wasm/: Cargo.toml
wasm/src/: lib.rs
